[package]
name = "shmarks"
version = "0.1.9"
edition = "2021"
authors = ["Belkanov Dmitriy <dbkkll@yandex.ru>"]
description = "Directory bookmarks for the shell."
license = "GPL-3"
categories = ["command-line-interface", "command-line-utilities"]
homepage = "https://github.com/ybda/shmarks"
repository = "https://github.com/ybda/shmarks"
readme = "README.md"
exclude = [
    ".vscode"
]
rust-version = "1.77.0"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
clap = { version = "4.4.18", features = ["cargo", "derive"] }
dirs = "5.0.1"
indexmap = { version = "2.1.0", features = ["serde"] }
nu-ansi-term = "0.50.0"
regex = "1.10.3"
thiserror = "1.0"
toml = { version = "0.8.8", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
